# downcat

./: .gitattributes  .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: build.yml
actions/build-frontend/: action.yml
frontend/: .env  .env.development  .eslintignore  .eslintrc.js  .eslintrc.json  .gitignore  .ignore  .prettierrc  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.vue  axios.ts  firebase.ts  fontAwesome.ts  i18n.ts  main.ts
frontend/src/assets/: main.css
frontend/src/components/: Checkbox.vue  ErrorScreen.vue  FileTable.vue  LoadingScreen.vue  UploadBtn.vue
frontend/src/locales/: en.json
frontend/src/router/: index.ts
frontend/src/store/: index.ts
frontend/src/views/: AuthView.vue  HomeView.vue
install/: downcat_linux.sh
src/: codec.rs  main.rs  models.rs  ssl.rs  updater.rs  util.rs
src/middleware/: auth.rs
src/routes/: auth.rs  get_file.rs  get_files.rs  get_info.rs  mod.rs  upload.rs
